# monadoc-7

./: .gitignore  cabal.project  monadoc.cabal
.devcontainer/: Dockerfile
.github/workflows/: build.yaml  ci.yaml  hlint.yaml  ormolu.yaml
source/executable/: Main.hs
source/test-suite/: Main.hs
