cabal-version: 3.6

name: monadoc
version: 0.2021.11.12

category: Documentation
description: Monadoc provides worse Haskell documentation.
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak
synopsis: Worse Haskell documentation.

source-repository head
    location: https://github.com/tfausak/monadoc-ng
    type: git

common library
    build-depends:
        , base ^>= 4.16.0
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-deriving-strategies
        -Wno-missing-export-lists
        -Wno-missing-kind-signatures
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe
        -Wno-unsafe

library
    import: library

    exposed-modules:
        Monadoc.Main
    hs-source-dirs: source/library
