cabal-version: 3.0

name: monadoc
version: 0.2021.11.12

category: Documentation
description: Monadoc provides worse Haskell documentation.
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak
synopsis: Worse Haskell documentation.

source-repository head
  location: https://github.com/tfausak/monadoc-ng
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@ to turn warnings into errors.
  manual: True

common library
  build-depends:
    , base ^>= 4.16.0
    , exceptions ^>= 0.10.4
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: monadoc
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  autogen-modules: Paths_monadoc
  exposed-modules:
    Monadoc
    Monadoc.Main
    Monadoc.Type.Flag
    Monadoc.Type.Settings
  hs-source-dirs: source/library
  other-modules: Paths_monadoc

executable monadoc
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite monadoc-test-suite
  import: executable

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
